--- a/package.json
+++ b/package.json
@@ -10,15 +10,26 @@
     "test": "jest"
   },
   "dependencies": {
+    "@baronha/react-native-multiple-image-picker": "^1.0.0",
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^17.4.2",
     "@react-native-firebase/auth": "^17.4.2",
+    "@react-native-firebase/firestore": "^17.4.2",
+    "@react-native-firebase/messaging": "^17.4.2",
+    "@react-native-firebase/storage": "^17.4.2",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "@shopify/restyle": "^2.4.2",
+    "axios": "^1.3.6",
+    "cheerio": "^1.0.0-rc.12",
+    "i18next": "^22.4.15",
     "lottie-react-native": "^5.1.5",
     "react": "18.2.0",
+    "react-i18next": "^12.2.2",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-ionicons": "^4.6.5",
