--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
 <uses-permission android:name="android.permission.RECORD_AUDIO" />
 <uses-permission android:name="android.permission.CAMERA" />
 <uses-permission android:name="android.permission.VIBRATE" />
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
 
 <!-- Android 13 -->
 <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
@@ -36,5 +39,8 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      <meta-data
+  android:name="com.google.android.geo.API_KEY"
+  android:value="AIzaSyBogzppBraqyA4O-cJKTJud8r-Xj2J-tr8"/>
     </application>
 </manifest>
