--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@baronha/react-native-multiple-image-picker": "^1.0.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-community/geolocation": "^3.0.6",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^17.4.2",
     "@react-native-firebase/auth": "^17.4.2",
@@ -34,7 +35,9 @@
     "react-native-gesture-handler": "^2.9.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-maps": "^1.7.1",
     "react-native-paper": "^5.6.0",
+    "react-native-permissions": "^3.8.0",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
