--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "18.2.0",
     "react-i18next": "^12.2.2",
     "react-native": "0.71.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-linear-gradient": "^2.6.2",
@@ -42,6 +43,7 @@
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
