--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cheerio": "^1.0.0-rc.12",
     "i18next": "^22.4.15",
     "lottie-react-native": "^5.1.5",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-i18next": "^12.2.2",
     "react-native": "0.71.6",
