--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-ionicons": "^4.6.5",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.7.1",
+    "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.6.0",
     "react-native-permissions": "^3.8.0",
     "react-native-reanimated": "^3.0.2",
@@ -45,6 +46,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.9.0",
+    "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
