--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "build-android": "cd android && ./gradlew assembleRelease",
+    "build-aab": "cd android && ./gradlew bundleRelease"
   },
   "dependencies": {
     "@baronha/react-native-multiple-image-picker": "^1.0.0",
@@ -25,6 +27,9 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@shopify/restyle": "^2.4.2",
+    "appcenter": "4.4.5",
+    "appcenter-analytics": "4.4.5",
+    "appcenter-crashes": "4.4.5",
     "axios": "^1.3.6",
     "cheerio": "^1.0.0-rc.12",
     "i18next": "^22.4.15",
@@ -44,6 +49,7 @@
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.9.0",
     "react-native-tab-view": "^3.5.1",
