--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build-aab": "cd android && ./gradlew bundleRelease"
   },
   "dependencies": {
+    "@bam.tech/react-native-image-resizer": "^3.0.5",
     "@baronha/react-native-multiple-image-picker": "^1.0.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/geolocation": "^3.0.6",
