--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "react-native": "0.71.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-config": "^1.5.1",
+    "react-native-date-picker": "^4.2.13",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-linear-gradient": "^2.6.2",
