--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -162,7 +162,7 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
-
+    implementation("androidx.core:core-splashscreen:1.0.0")
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
 
     implementation platform('com.google.firebase:firebase-bom:29.0.4')
