--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@bam.tech/react-native-image-resizer": "^3.0.5",
     "@baronha/react-native-multiple-image-picker": "^1.0.0",
+    "@gorhom/bottom-sheet": "^4.4.7",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/geolocation": "^3.0.6",
     "@react-native-community/masked-view": "^0.1.11",
@@ -45,11 +46,12 @@
     "react-hook-form": "^7.44.3",
     "react-i18next": "^12.2.2",
     "react-native": "0.71.6",
+    "react-native-bootsplash": "^4.7.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-config": "^1.5.1",
     "react-native-date-picker": "^4.2.13",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.7.1",
