--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-hook-form": "^7.44.3",
-    "react-i18next": "^12.2.2",
     "react-native": "0.71.6",
     "react-native-bootsplash": "^4.7.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-config": "^1.5.1",
     "react-native-date-picker": "^4.2.13",
     "react-native-dropdown-picker": "^5.4.6",
