--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-i18next": "^12.2.2",
     "react-native": "0.71.6",
     "react-native-bootsplash": "^4.7.5",
     "react-native-chart-kit": "^6.12.0",
@@ -55,6 +56,7 @@
     "react-native-ionicons": "^4.6.5",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.7.1",
+    "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.6.0",
     "react-native-permissions": "^3.8.0",
