--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -121,12 +121,10 @@ android {
         }
 
          release {
-            if (project.hasProperty('kosis')) {
-                storeFile file(MYAPP_UPLOAD_STORE_FILE)
-                storePassword pasarkita
-                keyAlias kosis
-                keyPassword pasarkita
-            }
+            storeFile file('kosis.keystore')
+            storePassword 'pasarkita'
+            keyAlias 'kosis'
+            keyPassword 'pasarkita'
         }
     }
     buildTypes {
@@ -136,7 +134,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
