--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^13.10.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0"
   },
