--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.6.0",
     "react-native-permissions": "^3.8.0",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
