--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-config": "^1.5.1",
     "react-native-date-picker": "^4.2.13",
+    "react-native-device-info": "^10.10.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-image-picker": "5.3.1",
